[package]
name = "sand"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2018"

[dependencies]
doclog = { version = "0.1.0", path = "../../doclog" }
jpar = { version = "0.1.0", path = "../../jpar", features = ["alloc"] }
num-bigint = "0.4.0"
num-integer = "0.1.44"
num-rational = "0.4.0"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "parsers"
path = "benches/parsers/mod.rs"
harness = false